05/external-service-externalname.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-service
spec:
  # by setting the type of service with "ExternalName",
  # the pods in service can connect to this service by
  # the name of "external-service.default.svc.cluster.local"
  # or shorter, "external-service"
  type: ExternalName
  externalName: hello.world.com
  ports:
    - port: 80
