05/external-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-service
spec:
  # the service without selector have to
  # make pod endpoints manually.
  ports:
    - port: 80
