05/kubia-svc-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia-nodeport
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
      # External clients can access to this service by
      # connecting to <any node's IP in cluster>:30123
      nodePort: 30123
  selector:
    app: kubia
